# xwai

./: ._pytest_status_out.txt  README.md  README_LONG.md  about.md  pyproject.toml  pyproject.xwai.toml  pytest.ini  requirements.txt  test_output.txt  test_output2.txt
docs/: GUIDE_01_USAGE.md  INDEX.md  REF_01_REQ.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_15_API.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_51_TEST.md
docs/logs/reviews/: REVIEW_20260207_PROJECT_STATUS.md
src/exonware/xwai/: __init__.py  base.py  config.py  contracts.py  defs.py  errors.py  facade.py  response.py  version.py
src/exonware/xwai/providers/: __init__.py  gemini.py  gpt.py
src/exonware_xwai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  runner.py  verify_installation.py
tests/0.core/: __init__.py  runner.py  test_core_facade.py  test_core_imports.py
tests/1.unit/: __init__.py  runner.py
tests/1.unit/config_tests/: test_config.py
tests/1.unit/defs_tests/: test_defs.py
tests/1.unit/errors_tests/: test_errors.py
tests/1.unit/facade_tests/: test_facade_provider_selection.py
tests/1.unit/providers_tests/: test_gemini_api_level.py  test_gpt_api_level.py  test_provider_helpers.py
tests/1.unit/response_tests/: test_response.py
tests/2.integration/: __init__.py  runner.py  test_integration_facade_workflow.py
tests/3.advance/: __init__.py  runner.py  test_extensibility.py  test_maintainability.py  test_performance.py  test_security.py  test_usability.py
